[project]
name = "test"
version = "0.1.0"
description = "Testing poetry"
authors = [
    {name = "martynas",email = "martynas.jonas.ver@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
